@@ -22,13 +22,13 @@
  * is English by default, for all files other than this one.
  *
  * Do NOT set this to false in any other message file! Leave the line out to
- * accept the default fallback to "en". 
+ * accept the default fallback to "en".
  */
 $fallback = false;
 
 /**
  * Is the language written right-to-left?
- * Note that right-to-left languages generally also specify 
+ * Note that right-to-left languages generally also specify
  *    $defaultUserOptionOverrides = array( 'quickbar' => 2 );
  */
 $rtl = false;
@@ -49,17 +49,17 @@ $separatorTransformTable = null;
 $defaultUserOptionOverrides = array();
 
 /**
- * Extra user preferences which will be shown in Special:Preferences as 
- * checkboxes. Extra settings in derived languages will automatically be 
+ * Extra user preferences which will be shown in Special:Preferences as
+ * checkboxes. Extra settings in derived languages will automatically be
  * appended to the array of the fallback languages.
  */
 $extraUserToggles = array();
 
 /**
- * URLs do not specify their encoding. UTF-8 is used by default, but if the 
+ * URLs do not specify their encoding. UTF-8 is used by default, but if the
  * URL is not a valid UTF-8 sequence, we have to try to guess what the real
  * encoding is. The encoding used in this case is defined below, and must be
- * supported by iconv(). 
+ * supported by iconv().
  */
 $fallback8bitEncoding = 'windows-1252';
 
@@ -69,20 +69,20 @@ $fallback8bitEncoding = 'windows-1252';
 $linkPrefixExtension = false;
 
 /**
- * Namespace names. NS_PROJECT is always set to $wgMetaNamespace after the 
- * settings are loaded, it will be ignored even if you specify it here. 
+ * Namespace names. NS_PROJECT is always set to $wgMetaNamespace after the
+ * settings are loaded, it will be ignored even if you specify it here.
  *
  * NS_PROJECT_TALK will be set to $wgMetaNamespaceTalk if that variable is
- * set, otherwise the string specified here will be used. The string may 
- * contain "$1", which will be replaced by the name of NS_PROJECT. It may 
- * also contain a grammatical transformation, e.g. 
+ * set, otherwise the string specified here will be used. The string may
+ * contain "$1", which will be replaced by the name of NS_PROJECT. It may
+ * also contain a grammatical transformation, e.g.
  *
  *     NS_PROJECT_TALK => 'Keskustelu_{{grammar:elative|$1}}'
  *
- * Only one grammatical transform may be specified in the string. For 
- * performance reasons, this transformation is done locally by the language 
- * module rather than by the full wikitext parser. As a result, no other 
- * parser features are available. 
+ * Only one grammatical transform may be specified in the string. For
+ * performance reasons, this transformation is done locally by the language
+ * module rather than by the full wikitext parser. As a result, no other
+ * parser features are available.
  */
 $namespaceNames = array(
 	NS_MEDIA            => 'Media',
@@ -137,12 +137,12 @@ $mathNames = array(
 );
 
 /**
- * A list of date format preference keys which can be selected in user 
+ * A list of date format preference keys which can be selected in user
  * preferences. New preference keys can be added, provided they are supported
- * by the language class's timeanddate(). Only the 5 keys listed below are 
+ * by the language class's timeanddate(). Only the 5 keys listed below are
  * supported by the wikitext converter (DateFormatter.php).
  *
- * The special key "default" is an alias for either dmy or mdy depending on 
+ * The special key "default" is an alias for either dmy or mdy depending on
  * $wgAmericanDates
  */
 $datePreferences = array(
@@ -155,14 +155,14 @@ $datePreferences = array(
 
 /**
  * The date format to use for generated dates in the user interface.
- * This may be one of the above date preferences, or the special value 
- * "dmy or mdy", which uses mdy if $wgAmericanDates is true, and dmy 
+ * This may be one of the above date preferences, or the special value
+ * "dmy or mdy", which uses mdy if $wgAmericanDates is true, and dmy
  * if $wgAmericanDates is false.
  */
 $defaultDateFormat = 'dmy or mdy';
 
 /**
- * Associative array mapping old numeric date formats, which may still be 
+ * Associative array mapping old numeric date formats, which may still be
  * stored in user preferences, to the new string formats.
  */
 $datePreferenceMigrationMap = array(
@@ -174,8 +174,8 @@ $datePreferenceMigrationMap = array(
 
 /**
  * These are formats for dates generated by MediaWiki (as opposed to the wikitext
- * DateFormatter). Documentation for the format string can be found in 
- * Language.php, search for sprintfDate. 
+ * DateFormatter). Documentation for the format string can be found in
+ * Language.php, search for sprintfDate.
  *
  * This array is automatically inherited by all subclasses. Individual keys can be
  * overridden.
@@ -341,11 +341,11 @@ $magicWords = array(
 
 /**
  * Alternate names of special pages. All names are case-insensitive. The first
- * listed alias will be used as the default. Aliases from the fallback 
- * localisation (usually English) will be included by default. 
- * 
- * This array may be altered at runtime using the LangugeGetSpecialPageAliases 
- * hook. 
+ * listed alias will be used as the default. Aliases from the fallback
+ * localisation (usually English) will be included by default.
+ *
+ * This array may be altered at runtime using the LangugeGetSpecialPageAliases
+ * hook.
  */
 $specialPageAliases = array(
 	'DoubleRedirects'           => array( 'DoubleRedirects' ),
@@ -421,7 +421,7 @@ $specialPageAliases = array(
 );
 
 /**
- * Regular expression matching the "link trail", e.g. "ed" in [[Toast]]ed, as 
+ * Regular expression matching the "link trail", e.g. "ed" in [[Toast]]ed, as
  * the first group, and the remainder of the string as the second group.
  */
 $linkTrail = '/^([a-z]+)(.*)$/sD';
@@ -1027,7 +1027,7 @@ public domain or similar free resource (see $1 for details).
 'longpagewarning' => "<strong>WARNING: This page is $1 kilobytes long; some
 browsers may have problems editing pages approaching or longer than 32kb.
 Please consider breaking the page into smaller sections.</strong>",
-'longpageerror' => "<strong>ERROR: The text you have submitted is $1 kilobytes 
+'longpageerror' => "<strong>ERROR: The text you have submitted is $1 kilobytes
 long, which is longer than the maximum of $2 kilobytes. It cannot be saved.</strong>",
 'readonlywarning' => '<strong>WARNING: The database has been locked for maintenance,
 so you will not be able to save your edits right now. You may wish to cut-n-paste
@@ -1052,8 +1052,8 @@ You can go back and edit an existing page, or [[Special:Userlogin|log in or crea
 
 # Account creation failure
 'cantcreateaccounttitle' => 'Can\'t create account',
-'cantcreateaccounttext' => 'Account creation from this IP address (<b>$1</b>) has been blocked. 
-This is probably due to persistent vandalism from your school or Internet service 
+'cantcreateaccounttext' => 'Account creation from this IP address (<b>$1</b>) has been blocked.
+This is probably due to persistent vandalism from your school or Internet service
 provider.',
 
 # History pages
@@ -1143,7 +1143,7 @@ undelete it again through this same interface, unless additional restrictions ar
 # Oversight log
 #
 'oversightlog' => 'Oversight log',
-'overlogpagetext' => 'Below is a list of the most recent deletions and blocks involving content 
+'overlogpagetext' => 'Below is a list of the most recent deletions and blocks involving content
 hidden from Sysops. See the [[Special:Ipblocklist|IP block list]] for the list of currently operational bans and blocks.',
 
 # Diffs
@@ -1501,7 +1501,7 @@ this old version, (rev) = revert to this old version.
 This includes \"talk\" pages, pages about {{SITENAME}}, minimal \"stub\"
 pages, redirects, and others that probably don't qualify as content pages.
 Excluding those, there {{PLURAL:$2|is '''1''' page that is a|are '''$2''' pages that are}} probably legitimate
-content {{PLURAL:$2|page|pages}}. 
+content {{PLURAL:$2|page|pages}}.
 
 '''$8''' {{PLURAL:$8|file|files}} have been uploaded.
 
@@ -1881,9 +1881,9 @@ comment field and all checkboxes.",
 'undeletehistory' => 'If you restore the page, all revisions will be restored to the history.
 If a new page with the same name has been created since the deletion, the restored
 revisions will appear in the prior history, and the current revision of the live page
-will not be automatically replaced. Also note that restrictions on file revisions are lost upon restoration', 
+will not be automatically replaced. Also note that restrictions on file revisions are lost upon restoration',
 'undeleterevdel' => 'Undeletion will not be performed if it will result in the top page revision being
-partially deleted. In such cases, you must uncheck or unhide the newest deleted revisions. Revisions of files 
+partially deleted. In such cases, you must uncheck or unhide the newest deleted revisions. Revisions of files
 that you don\'t have permission to view will not be restored.',
 'undeletehistorynoadmin' => 'This article has been deleted. The reason for deletion is
 shown in the summary below, along with details of the users who had edited this page
@@ -2300,6 +2300,8 @@ All transwiki import actions are logged at the [[Special:Log/import|import log]]
 'tooltip-t-emailuser' => 'Send a mail to this user',
 'tooltip-t-upload' => 'Upload images or media files',
 'tooltip-t-specialpages' => 'List of all special pages',
+'tooltip-t-print' => 'Printable version of this page',
+'tooltip-t-permalink' => 'Permanent link to this version of the page',
 'tooltip-ca-nstab-main' => 'View the content page',
 'tooltip-ca-nstab-user' => 'View the user page',
 'tooltip-ca-nstab-media' => 'View the media page',
